--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.1.2",
     "chroma-js": "^2.0.4",
     "rc-slider": "^8.6.13",
     "react": "^16.8.6",
